<resources>
    <string name="app_name">Al - Huda Masjid</string>

    <string name="profil">Profil</string>
    <string name="data">Data</string>
    <string name="jadwal">Jadwal</string>
    <string name="account">Akun</string>

    <string name="idLogin">Email</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="belumPunyaAkun">Belum Punya Akun, Klik Tulisan Ini</string>

    <string name="registrasi">Registrasi</string>
    <string name="nama">Nama Lengkap</string>
    <string name="alamat">Alamat</string>
    <string name="sudahPunyaAkun">Sudah Punya Akun? Klik Disini</string>

    <string name="option">Option</string>
    <string name="optdetail">Detail Inventaris</string>
    <string name="optupdate">Update Inventaris</string>
    <string name="optDelete">DeleteInventaris</string>


    <string name="no">No</string>
    <string name="judul">Nama Inventaris</string>
    <string name="tanggal">Tanggal</string>
    <string name="update">Perbarui Inventaris</string>
    <string name="tambah">Tambahkan Inventaris Disini</string>
    <string name="jumlah">Jumlah Barang</string>
    <string name="save">Simpan</string>
    <string name="ket">Keterangan</string>

    <string name="pemasukan">Pemasukan</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="listpemasukan">Tambahkan List Pemasukan</string>
    <string name="listpengeluaran">Tambahkan List Pengeluaran</string>
    <string name="transaksi">Nama Transaksi</string>
    <string name="total">Total</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
