<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientsplash"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/signup_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:gravity="center_horizontal"
        android:text="@string/registrasi"
        android:textColor="#f5e6ef"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_relativelayout"
        android:layout_below="@+id/signup_title"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="#f5e6ef"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/id_reg"
                    android:drawableLeft="@drawable/ic_person_outline_black"
                    android:hint="@string/idLogin"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password_reg"
                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_btn"
                android:layout_margin="22dp"
                android:background="@drawable/color_button_simpan"
                android:text="@string/registrasi"
                android:textAllCaps="false"
                android:textColor="#f5e6ef"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_txt"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:text="@string/sudahPunyaAkun"/>

        </LinearLayout>

    </RelativeLayout>

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/user_profile_photo_signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_person_add_black_24dp"
        android:layout_below="@id/signup_title"
        android:background="@drawable/background_profile"
        android:elevation="4dp"/>

</RelativeLayout>