<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradientsplash"
    tools:context=".KeuanganMasukActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground1"
        android:layout_margin="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radiogrup"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="5dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_masuk"
                android:layout_weight="1"
                android:text="@string/pemasukan"/>

            <RadioButton
                android:id="@+id/rb_keluar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_toRightOf="@+id/rb_masuk"
                android:text="@string/pengeluaran" />

        </RadioGroup>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/radiogrup">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    app:cardElevation="10dp"
                    android:elevation="10dp"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2">

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="000000"
                                android:id="@+id/total_amount_pemasukan"
                                android:padding="10dp"
                                android:textAppearance="?android:textAppearanceMedium"/>

                        </RelativeLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/recycler_home_pemasukan">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_pemasukan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="15dp"
                app:fabSize="normal"
                android:src="@drawable/ic_add"
                android:background="@drawable/bulatan"/>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_below="@+id/radiogrup"
            android:layout_marginTop="30dp"
            android:text="@string/total"
            android:textAppearance="?android:textAppearanceMedium" />

    </RelativeLayout>

</LinearLayout>